# python_project_template

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements.txt  squared.py  test_squared.py
.github/workflows/: main.yml
