[tool.poetry]
name = "test_python"
version = "0.1.0"
description = "Simple template for starting python projects"
authors = ["Jesse van der Wolf <jessevanderwolf@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pylint = "^2.13.9"
pytest = "^7.1.2"
black = "^22.3.0"

[tool.poetry.dev-dependencies]
jupyterlab = "^3.4.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
